<resources>
    <string name="app_name">Area Calculator</string>
    <string name="length1">Length 1 :</string>
    <string name="length2">Length 2</string>
    <string name="Length2new">Length 2</string>
    <string name="length1new">Length 1</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
</resources>
